Fix flickering

--- a/src/modules/market-charts/components/market-outcome-charts--candlestick/market-outcome-charts--candlestick.styles.less
+++ b/src/modules/market-charts/components/market-outcome-charts--candlestick/market-outcome-charts--candlestick.styles.less
@@ -185,6 +185,10 @@ div.MarketOutcomeChartsHeader__stats {
       }
     }
 
+    .period-hover-target {
+      fill-opacity: 0;
+    }
+
     line.crosshair {
       fill: none;
       stroke: @color-white;
